moved GridGenerator and MinesweeperSolver in separate classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ set(SOURCES
     src/gamelogic.cpp
     src/steamintegration.cpp
     src/gridbridgehelper.cpp
+    src/gridgenerator.cpp
+    src/minesweepersolver.cpp
 )
 
 set(HEADERS
@@ -38,6 +40,8 @@ set(HEADERS
     include/gamelogic.h
     include/steamintegration.h
     include/gridbridgehelper.h
+    include/gridgenerator.h
+    include/minesweepersolver.h
 )
 
 set(QML_FILES
@@ -138,10 +142,10 @@ qt_add_translations(${CMAKE_PROJECT_NAME}
         i18n/Retr0Mine_en.ts
         i18n/Retr0Mine_fr.ts
     RESOURCE_PREFIX "/i18n"
-    LUPDATE_OPTIONS "-no-obsolete"
+    #LUPDATE_OPTIONS "-no-obsolete"
 )
 
-#add_dependencies(${CMAKE_PROJECT_NAME} update_translations)
+add_dependencies(${CMAKE_PROJECT_NAME} update_translations)
 
 if(WIN32)
     target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
