--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(Qt6 REQUIRED COMPONENTS
     Multimedia
     LinguistTools
     Concurrent
+    QuickControls2
 )
 
 qt_standard_project_setup(REQUIRES 6.8)
@@ -133,6 +134,7 @@ target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
     Qt6::Quick
     Qt6::Multimedia
     Qt6::Concurrent
+    Qt6::QuickControls2
 )
 
 qt_add_translations(${CMAKE_PROJECT_NAME}
