build linux with 22.04

--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -43,7 +43,7 @@ jobs:
           path: build/install
 
   linux-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
