[no ci] updated release wf

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -62,7 +62,7 @@ jobs:
           path: tools/Output/Retr0Mine_Installer.exe
 
   linux-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
